welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:32: error: not found: value gogogo4
gogogo4
^PatternPicture:35: error: not found: value gogogo4
gogogo4
^