welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
def quadrille() {
	avance
	baisseBrosse
	leveBrosse
}
def faireL(c:Color) { //Etre devant le 1er bloc coloré
	setCouleurBrosse(c)
	quadrille
	avance
	gauche
	quadrille
}
def carre() {
	faireL(Color.BLUE)
	faireL(Color.GREEN)
	faireL(Color.YELLOW)
	faireL(Color.RED)
}
def gogogo(cases:Int) {
	for (nb <- 1 to cases)
	avance
}
avance
carre
gogogo(4)
carre
gauche
gogogo(4)
gauche
gogogo4
retourne
carre
gogogo4
carre
recule
}
